# GeoAlgLib

./: package.cabal
src/: Line.lhs  Polygon.lhs
src/Basics/: Pretty.lhs  Topped.lhs
src/Tests/: Test.hs
